--- a/src/main.global.css
+++ b/src/main.global.css
@@ -1,4 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@font-face {
+  font-family: 'Muller-Reg';
+  src: local('Muller Regular'), local('MullerRegular'),
+    url('./fonts/MullerRegular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Muller-Reg-Italic';
+  src: local('Muller Regular Italic'), local('MullerRegularItalic'),
+    url('./fonts/MullerRegularItalic.woff') format('woff');
+  font-weight: 400;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'Muller-Medium';
+  src: local('Muller Medium'), local('MullerMedium'),
+    url('./fonts/MullerMedium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Muller-Bold';
+  src: local('Muller Bold'), local('MullerBold'),
+    url('./fonts/MullerBold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Muller-Light-Italic';
+  src: local('Muller Light Italic'), local('MullerLightItalic'),
+    url('./fonts/MullerLightItalic.woff') format('woff');
+  font-weight: 300;
+  font-style: italic;
+}
 
 body {
   font-family: 'Roboto', serif;
